# LibUtils

./: CMakeLists.txt  README.md
docs/: requirements.md
examples/: main.cpp
include/utils/: text.hpp
src/: text.cpp
test/: text_test.cpp
